fix: menu z-index

--- a/src/app/components/navbar/menu.module.scss
+++ b/src/app/components/navbar/menu.module.scss
@@ -9,11 +9,10 @@
     position: fixed;
     display: flex;
     flex-direction: column;
-    z-index: 1;
     justify-content: center;
     align-items: center;
     transition: all ease-in-out .3s;
-
+    z-index: 2;
     img {
         margin-bottom: 2rem;
     }
